hphp/test/zend/good/ext/date/tests/date_sub_basic.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!function_exists('date_sub')) echo "skip: date_sub() function not found!";
}
